--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,15 @@
             "name": "Leo Duville",
             "email": "nose@gmail.com",
             "role": "Creator / Main Developer"
+        },
+        {
+            "name": "Enzo Bianchi",
+            "email": "nose@gmail.com",
+            "role": "Creator / Main Developer"
         }
     ],
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.3.3",
         "filp/whoops": "~2",
         "monolog/monolog": "^3.5"
     },
