--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,10 @@
         }
     ],
     "require": {
-        "php": ">=8.3.3",
+        "php": ">=8.2.5",
         "filp/whoops": "~2",
-        "monolog/monolog": "^3.5"
+        "monolog/monolog": "^3.5",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
