--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "php": ">=8.2.5",
         "filp/whoops": "~2",
         "monolog/monolog": "^3.5",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "robmorgan/phinx": "^0.16.1"
     },
     "autoload": {
         "psr-4": {
