Implementa entorno de desarrollo

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Puerto del servidor web.
+APP_PORT=8888
+
 # Ver todos los niveles disponibles en
 # https://seldaek.github.io/monolog/doc/01-usage.html#log-levels    
 LOG_LEVEL=DEBUG
@@ -13,3 +16,6 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=3307
 DB_CHARSET=utf8
+
+# Puerto del Adminer.
+ADMINER_PORT=8090
