--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "filp/whoops": "~2",
     "monolog/monolog": "^3.5",
     "vlucas/phpdotenv": "^5.6",
-    "robmorgan/phinx": "^0.16.1"
+    "robmorgan/phinx": "^0.16.1",
+    "twig/twig": "^3.0"
   },
   "license": "MIT",
   "autoload": {
