--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ LOG_PATH='/logs/app.log'
 
 # Configuracion de la DB
 DB_ADAPTER=mysql
-DB_HOSTNAME=localhost
+DB_HOSTNAME=db
 DB_DBNAME=tents
 DB_USERNAME=root
 DB_PASSWORD=
-DB_PORT=3307
-DB_CHARSET=utf8
+DB_PORT=3306
+DB_CHARSET=utf8mb4
 
 # Puerto del Adminer.
 ADMINER_PORT=8090
