--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,6 +16,8 @@ services:
       MYSQL_ROOT_PASSWORD: $DB_PASSWORD
     volumes:
       - db:/var/lib/mysql
+    ports:
+      - "3306:3306"
   adminer:
     image: adminer
     ports:
