--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "monolog/monolog": "^3.5",
     "vlucas/phpdotenv": "^5.6",
     "robmorgan/phinx": "^0.16.1",
-    "twig/twig": "^3.0"
+    "twig/twig": "^3.0",
+    "mercadopago/dx-php": "3.0.7"
   },
   "license": "MIT",
   "autoload": {
