--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "vlucas/phpdotenv": "^5.6",
     "robmorgan/phinx": "^0.16.1",
     "twig/twig": "^3.0",
-    "mercadopago/dx-php": "3.0.7"
+    "mercadopago/dx-php": "^3.0"
   },
   "license": "MIT",
   "autoload": {
