--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "vlucas/phpdotenv": "^5.6",
     "robmorgan/phinx": "^0.16.1",
     "twig/twig": "^3.0",
-    "mercadopago/dx-php": "^3.0"
+    "mercadopago/dx-php": "^3.0",
+    "phpmailer/phpmailer": "^6.9"
   },
   "license": "MIT",
   "autoload": {
