cambios env.example

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,15 @@ DB_CHARSET=utf8mb4
 
 # Puerto del Adminer.
 ADMINER_PORT=8090
+
+#Mercado pago 
+MERCADO_PAGO_ACCES_TOKEN = MERCADO_PAGO_ACCES_TOKEN
+
+#Correo Electronico
+
+MAIL_PASSWORD = MAIL_PASSWORD
+MAIL = MAIL
+
+#ngrok
+
+NGROK = NGROKP
